completed first step

--- a/war/index.html
+++ b/war/index.html
@@ -22,6 +22,12 @@
       <tr>
         <td><a href="zdom">Zdom</a></td>
       </tr>
+      <tr>
+        <td><a href="test">Test</a></td>
+      </tr>
+      <tr>
+        <td><a href="add_user.html">add_user.html</a></td>
+      </tr>
     </table>
   </body>
 </html>
